syntax = "proto3";

package auth.v1;

option go_package = "github.com/yclw/mys_project/pkg/protobuf/gen/auth/v1";

// 认证服务定义
service AuthService {
  // ping
  rpc Ping(PingRequest) returns (PongResponse);
  // 用户名密码登录
  rpc Login(LoginRequest) returns (LoginResponse);
  // 注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  // 发送验证码
  rpc SendVerificationCode(SendVerificationCodeRequest) returns (SendVerificationCodeResponse);
}

// ping
message PingRequest {
}

// pong
message PongResponse {
  string message = 1;
}

// 登录请求
message LoginRequest {
}

// 登录响应
message LoginResponse {
}

// 注册请求
message RegisterRequest {
}

// 注册响应
message RegisterResponse {
}

// 发送验证码请求
message SendVerificationCodeRequest {
  string email = 1;
}

// 发送验证码响应
message SendVerificationCodeResponse {
}

// 令牌验证请求
message VerifyTokenRequest {
}

// 令牌验证响应
message VerifyTokenResponse {
}